--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.4
   provider: ^6.0.5
+  flutter_staggered_grid_view: ^0.4.1
 
 dev_dependencies:
   flutter_test:
