--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.4
   provider: ^6.0.5
   flutter_staggered_grid_view: ^0.4.1
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies:
   flutter_test:
