--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.1
   font_awesome_flutter: ^10.4.0
   animate_do: ^3.0.2
+  assets_audio_player: ^3.0.6
 
 dev_dependencies:
   flutter_test:
